# cheesecake

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Makefile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
assets/: htmx-error-handler.js
build_utils/: build-assets.zsh  package.json  tailwind.config.js
src/: config.rs  lib.rs  main.rs
src/app/: Cargo.toml
src/app/core/: app.rs  main.rs  on_shutdown.rs
src/app/migrations/: README.md
src/business/: mod.rs
src/business/controllers/: Cargo.toml  app_rejection.rs  index.rs  lib.rs  mod.rs
src/business/controllers/nested/: index.rs  mod.rs
src/business/controllers/v1/: index.rs
src/business/repositories/: Cargo.toml  lib.rs  mod.rs
src/business/services/: Cargo.toml
src/configs/: app.rs  environment.rs  helpers.rs  mod.rs  shutdown_signal.rs
src/controller/: index.rs  mod.rs
src/other/custom-errors/: Cargo.toml  app_exception.rs  app_rejection.rs  err_response.rs  lib.rs
src/other/environment/: Cargo.toml  environment.rs  lib.rs
src/other/utils/: Cargo.toml  canonicalize_unexistent.rs  init_logging.rs  lib.rs
src/routing/: index.rs  mod.rs
src/types/: Cargo.toml  api_response.rs
src/types/api/: mod.rs  response.rs
src/utils/: environment.rs  init_logging.rs  minify_template.rs  mod.rs
src/utils/custom_errors/: app_error.rs  err_response.rs  from_rejection.rs  mod.rs
src/view/: header.rs  index.rs  mod.rs
src/views/: Cargo.toml  error.rs  header.rs  index.rs  mod.rs  not_found.rs
src/views/core/: error.rs  footer.rs  header.rs  index.rs  lib.rs  not_found.rs
src/views/nested/: index.rs
src/views/templates/: base.html  error.html  footer.html  header.html  index.html  not_found.html
templates/: base.html  error.html  header.html  index.html  layout.html  not_found.html  test.html
templates/nested/: index.html
