[package]
name = "app"
version = "0.1.0"
authors = [
    "Elaina <17bestradiol@proton.me>",
    "Emily <snri.atomoxetine@proton.me>",
]
edition = "2021"

[[bin]]
name = "app"
path = "core/main.rs"

[lints]
workspace = true

[dependencies]
repositories = { path = "../business/repositories" }
environment = { path = "../other/environment" }
types = { path = "../types" }
tokio = { version = "^1.41", features = ["rt-multi-thread", "signal"] }
tracing = "^0.1"
dotenv = "^0.15"
utils = { path = "../other/utils" }
sqlx = { version = "^0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
axum = "^0.7"
controllers = { path = "../business/controllers" }
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
tower = { version = "^0.4", features = ["load-shed", "limit"] }
tower-http = { version = "^0.5", features = ["fs", "trace", "timeout"] }

[target.'cfg(unix)'.dependencies]
jemallocator = "^0.5"
