[package]
name = "types"
version = "0.1.0"
authors = ["Elaina <17bestradiol@proton.me>", "Emily <snri.atomoxetine@proton.me>"]
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1.10", features = ["v4", "fast-rng"]}
chrono = { version = "^0.4", features = ["serde"] }