[package]
name = "types"
version = "0.1.0"
authors = [
    "Elaina <17bestradiol@proton.me>",
    "Emily <snri.atomoxetine@proton.me>",
]
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1.11", features = ["v4", "fast-rng"] }
chrono = { version = "^0.4", features = ["serde"] }
axum = "^0.7"
axum-extra = { version = "^0.9" }
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
tracing = "^0.1"
