[package]
name = "views"
version = "0.1.0"
authors = ["Elaina <17bestradiol@proton.me>", "Emily <snri.atomoxetine@proton.me>"]
edition = "2021"

[lib]
path = "core/lib.rs"

[lints]
workspace = true

[dependencies]
lazy_static = "^1.5"
minify-html = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
tera = "^1.20"
hotwatch = "^0.5"
chrono = { version = "^0.4", features = ["serde"] }
environment = { path = "../other/environment" }
