[package]
name = "controllers"
version = "0.1.0"
authors = ["Elaina <17bestradiol@proton.me>", "Emily <snri.atomoxetine@proton.me>"]
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
axum = "^0.7"
axum-extra = { version = "^0.9", features = ["cookie"] }
custom-errors = { path = "../../other/custom-errors" }
types = { path = "../../types" }
views = { path = "../../views" }
cookie = "^0.18"
environment = { path = "../../other/environment" }
validator = { version = "^0.18", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
