[package]
name = "controllers"
version = "0.1.0"
authors = [
    "Elaina <17bestradiol@proton.me>",
    "Emily <snri.atomoxetine@proton.me>",
]
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
axum = "^0.7"
axum-extra = { version = "^0.9" }
types = { path = "../../types" }
environment = { path = "../../other/environment" }
validator = { version = "^0.18", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
