[package]
name = "custom-errors"
version = "0.1.0"
authors = ["Elaina <17bestradiol@proton.me>", "Emily <snri.atomoxetine@proton.me>"]
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
axum = "^0.7"
tracing = "^0.1"
uuid = { version = "^1.11", features = ["v4", "fast-rng"]}
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
axum-extra = { version = "^0.9", features = ["cookie"] }
types = { path = "../../types" }
views = { path = "../../views" }
