[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
axum-extra = { version = "^0.9", features = ["cookie"] }
tracing-subscriber = "^0.3"
tracing-appender = "^0.2"
color-eyre = "^0.6"
tokio = { version = "^1.37", features = ["rt-multi-thread", "signal"] }
environment = { path = "../environment" }
axum = "^0.7"
tracing = "^0.1"
uuid = { version = "^1.10", features = ["v4", "fast-rng"]}
