[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { version = "^1.0", features = ["std", "backtrace"] }
axum-extra = { version = "^0.9" }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"
color-eyre = "^0.6"
debug_print = "^1.0"
tokio = { version = "^1.41", features = ["rt-multi-thread", "signal"] }
environment = { path = "../environment" }
axum = "^0.7"
uuid = { version = "^1.11", features = ["v4", "fast-rng"] }
